Fix 863 (emoji wrapping) and 864 (environmental sounds bug)

--- a/experiments/nodejs/Spatial-Standup/src/client/css/signals.scss
+++ b/experiments/nodejs/Spatial-Standup/src/client/css/signals.scss
@@ -14,7 +14,7 @@
     padding: 8px;
     
     width: auto;
-    max-width: 384px;
+    max-width: 352px;
     
     border-radius: 0 0 0 5px;
 }
@@ -29,7 +29,7 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 36px;
-    margin: 3px;
+    margin: 2px;
 
     &:hover {
         border-radius: 4px;
